2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_man_pages): Rely on mans.am to define
	man%SECTION%dir and MANS.
	* mans.am: Do it.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_dump): Use %var_type properly.
	(&macro_define): Enforce better overriding rules.
	Handle the special case that used to handle...
	(&define_pretty_variable): this.
	Hence, don't.
	The variables you define are owned by Automake.
	(&generate_makefile): PRE_INSTALL and co must not be defined *by
	the user*.
	(&variable_defined): Now independent from the owner.
	(&variable_output, &variable_pretty_output): Adjust to %var_type.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (%var_was_plus_eq): Rename as...
	(%var_type): this.
	(%def_type): Remove.
	(&macro_define): %var_type may now hold `', `+', or `:'.
	(%conditional, %am_vars, %content_lines): Rename as...
	(%var_value, %var_comment, %var_line): these.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_output): Admit a list of @CONDS.
	(&variable_pretty_output): New.
	(&define_pretty_variable): Use it.
	(&read_am_file, &file_contents_internal): Prepend a separator to
	$am_vars only if there is none yet.
	(&file_contents_internal): Rename $separator as $spacing to
	harmonize with &read_am_file.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_install_var): Transform DIST, and let the *.am
	files handle DIST_COMMON.
	* data.am, header.am, java.am, list.am, python.am, script.am: Set
	DIST_COMMON.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (%dist_common): Remove.
	(%configure_dist_common): Replace with...
	($configure_dist_common): this.
	(&generate_makefile): Read the user file before using
	push_dist_common, as it sets DIST_COMMON, and read_am_file checks
	that no variable is defined before it is run.
	(&handle_texinfo): Don't handle DIST_COMMON, let your file do it.
	(&dist_cmp): Rename as...
	(&for_dist_common): this.