@@ -3189,6 +3189,7 @@ sub handle_subdirs
     }
 
     $output_rules .= &file_contents ('subdirs');
+    variable_pretty_output ('RECURSIVE_TARGETS', 'TRUE');
 }
 
 
@@ -6874,6 +6875,8 @@ sub file_contents_internal ($%)
 	      if (!defined $var_comment{$var}
 		  || substr ($var_comment{$var}, -1) ne "\n");
 	    $var_comment{$var} .= "$comment";
+	    # Strip the continuation backslashes.
+	    $val =~ s/\\$//mg;
 	    macro_define ($var, 1, $type, $cond, $val, $.);
 	    push (@var_list, $var);
 
