@@ -1,5 +1,12 @@
 2001-04-09  Akim Demaille  <akim@epita.fr>
 
+	* subdirs.am (RECURSIVE_TARGETS): New variable.
+	Use it.
+	* automake.in (&handle_subdirs): Output it.
+	(&file_contents_internal): Support value spread on several lines.
+
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&handle_man_pages): Rely on mans.am to define
 	man%SECTION%dir and MANS.
 	* mans.am: Do it.
